@@ -24,8 +24,6 @@ let get1' = function
   | (Cons (x, _) : (_ * 'a, 'a) t) -> x
   | Nil -> assert false ;; (* ok *)
 [%%expect{|
-val get1' : ('b * 'a as 'a, 'a) t -> 'b = <fun>
-|}, Principal{|
 Line 3, characters 4-7:
 3 |   | Nil -> assert false ;; (* ok *)
         ^^^
